# VATL4Pose-WACV2024

./: .gitignore  LICENSE  README.md  label_idx.txt  pyproject.toml  requirements.txt  setup.py  test.ann  test_idx.txt  train_idx.txt  unlabel_idx.txt
ALiPy/test/: al_test.py
JRDB_toolkit/: README.md  error_log.txt  pose_eval.py
JRDB_toolkit/posetrack/: eval.py  eval_mot.py  eval_pose.py
VL4Pose/: README.md
active_learning/: ActiveLearning.py  __init__.py  al_metric.py  al_model.py  al_settings.pkl  al_test.py  approximate_nearest_neighbors.py  local_peak.py  test_idx.txt  train_idx.txt  unlabel_idx.txt  version.py  visualize_GT.py
alphapose/: opt.py  version.py
configs/: al_setting.yaml  al_simple.yaml  al_simple_duw.yaml  trainval_video_list.txt  val_video_list_0.txt  val_video_list_1.txt  val_video_list_2.txt  val_video_list_3.txt  val_video_list_4.txt  val_video_list_5.txt  val_video_list_6.txt  val_video_list_7.txt  val_video_list_8.txt  val_video_list_9.txt  val_video_list_continue.txt  val_video_list_ex1.txt  val_video_list_ex2.txt  val_video_list_exMPE.txt  val_video_list_exTHC.txt  val_video_list_full.txt  val_video_list_full1.txt  val_video_list_full2.txt  val_video_list_full3.txt  val_video_list_full4.txt  val_video_list_part1.txt  val_video_list_part10.txt  val_video_list_part11.txt  val_video_list_part12.txt  val_video_list_part2.txt  val_video_list_part3.txt  val_video_list_part4.txt  val_video_list_part5.txt  val_video_list_part6.txt  val_video_list_part7.txt  val_video_list_part8.txt  val_video_list_part9.txt
docs/: MODEL_ZOO.md
scripts/: Run_active_learning.py  active_learning.py  backrun_active_learning.sh  command.txt  convert_to_eps.py  demo_api.py  demo_inference.py  detailed_result.py  jrdbpose_train.py  poseestimator_eval.py  posetrack_train.py  run_active_learning.sh  summarize_result.py  train.py  train.sh  validate.py  visualize_result.py  wacv_result.py  wholebodyAE_train.py
(+214 files in other folders)
