[project]
name = "vatl4pose-wacv2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "alembic==1.16.4",
    "alipy==1.2.5",
    "annoy",
    "cachetools==6.1.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorlog==6.9.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cython-bbox==0.1.5",
    "cython==3.1.3",
    "torch==1.12.1",
    "torchaudio==0.12.1",
    "torchvision==0.13.1",
    "easydict==1.13",
    "fonttools==4.59.1",
    "greenlet==3.2.4",
    "idna==3.10",
    "imageio==2.37.0",
    "japanize-matplotlib==1.1.3",
    "joblib==1.5.1",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.10.5",
    "networkx==3.4.2",
    "numpy==1.23.5",
    "nvidia-cuda-nvrtc-cu11==11.7.99",
    "nvidia-cuda-runtime-cu11==11.7.99",
    "nvidia-cudnn-cu11==8.5.0.96",
    "optuna==4.4.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "pip==25.2",
    "prettytable==3.16.0",
    "protobuf==6.32.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlalchemy==2.0.43",
    "tensorboardx==2.6.4",
    "threadpoolctl==3.6.0",
    "tifffile==2025.5.10",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "umap==0.1.1",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "wheel==0.45.1",
    "opencv-python>=4.8.1.78",
    "pandas>=2.1.0",
    "scikit-image>=0.24.0",
    "pycocotools>=2.0.10",
]

[tool.uv.sources]
annoy = { git = "https://github.com/spotify/annoy.git", rev = "1bdf0d5ab8c4a1f7005b7fef2c6db2d66cfb4ab6" }
